--- a/journal/202003.md
+++ b/journal/202003.md
@@ -6,10 +6,10 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 Highlights for March:
 
-- Yearly budgets for US/English and Brazilian outreach approved, $286K in total.
+- Yearly budgets for US/English and Brazilian outreach were approved for $286K in total.
 - First order-driven atomic swap trade on testnet coordinated by the DEX.
 - Solid dev progress in multiple projects.
-- DJ has just turned 2 years!
+- DJ has just turned 2 years old!
 
 ## Development
 
@@ -17,7 +17,7 @@ Unless otherwise noted, the work reported here has the status "merged to master"
 
 [dcrd](https://github.com/decred/dcrd):
 
-- ECDSA signatures [decoupled](https://github.com/decred/dcrd/pull/2139) from secp256k1 package to make it clear that ECDSA is only one possible digital signature algorithm, and to enable Schnorr signatures to be made first class citizens of the codebase
+- ECDSA signatures [decoupled](https://github.com/decred/dcrd/pull/2139) from secp256k1 package to make it clear that ECDSA is only one possible digital signature algorithm, and to enable Schnorr signatures to be made first-class citizens of the codebase
 - exported [field value type](https://github.com/decred/dcrd/pull/2134) to allow external callers to perform optimized field math
 - signature verification further optimized by minimizing expensive operations
 - added method to [clear](https://github.com/decred/dcrd/pull/2117) private key from memory and [reduced](https://github.com/decred/dcrd/pull/2131) number of internal copies of private keys to enhance security against memory scraping
@@ -50,15 +50,14 @@ dcrd has less than 16% code overlap with btcd meaning that 84% is the new develo
 In development:
 
 - [CoinShuffle++](https://github.com/decred/decrediton/pull/2452) support
-
 [Politeia](https://github.com/decred/politeia):
 
 - [invalidate](https://github.com/decred/politeia/pull/1159) sessions on password change
 - test improvements and bug fixes
 
-tlog integration has begun and is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to take ~2 months. In [July 2019](201907.md#development) we've inaccurately reported the start of tlog integration but that work was actually a reference implementation to serve as a proof of concept and demonstrate that Google's [Trillian](https://github.com/google/trillian) data store can replace existing Git backend. It was [merged](https://github.com/decred/politeia/pull/951) in August and contained a [client/server](https://github.com/decred/politeia/tree/master/tlog) with basic functionality for storing documents. This experience gave enough instight to know that it will work. Next step is to actually write a Politeia backend that uses Trillian.
+tlog integration has begun and is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to take ~2 months. In [July 2019](201907.md#development) we've inaccurately reported the start of tlog integration but that work was actually a reference implementation to serve as a proof of concept and demonstrate that Google's [Trillian](https://github.com/google/trillian) data store can replace existing Git backend. It was [merged](https://github.com/decred/politeia/pull/951) in August and contained a [client/server](https://github.com/decred/politeia/tree/master/tlog) with basic functionality for storing documents. This experience gave enough insight to know that it will work. Next step is to actually write a Politeia backend that uses Trillian.
 
-Major advantages of the tlog backend is it will make Politeia more scalable and allow to censor content after it's been made public, while keeping the audit trail of all data ever submitted. It will also allow a proper fix of the duplicate comments bug.
+Major advantages of the tlog backend is it will make Politeia more scalable and allow censoring content after it's been made public, while keeping the audit trail of all data ever submitted. It will also allow a proper fix of the duplicate comments bug.
 
 CMS:
 
@@ -66,11 +65,11 @@ CMS:
 - ability to [deactivate](https://github.com/decred/politeia/pull/1154) temporary contractor account on paid invoice and require admin approval to allow another invoice
 - [preload](https://github.com/decred/politeiagui/pull/1829) user info to assist in authoring invoices
 - redesign work started in October finally [merged](https://github.com/decred/politeiagui/pull/1828). This large change adds 9K and deletes 24K lines of code.
-  - { any comments? what is pi-ui and what motivated it? why redesign is neccessary for an internal system, or is it more than just a new skin? dark mode? }
+- { any comments? what is pi-ui and what motivated it? why redesign is neccessary for an internal system, or is it more than just a new skin? dark mode? }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
-- code maintenance to improve error handling and cancellation, add documentation, upgrade dependencies and add tests
+- code maintenance to improve error handling and cancellation, added documentation, upgraded dependencies and added tests
 
 [dcrpool](https://github.com/decred/dcrpool):
 
@@ -149,12 +148,12 @@ A total of 56 pull requests merged from 3 contributors adding 11K and deleting 6
 
 - large cleanup pass fixing minor issues with the new website
 - updated VSP [copy](https://github.com/decred/dcrweb/pull/853)
-- Recruiting page removed and decred.org/recruiting now redirects to the [Contributing](https://docs.decred.org/contributing/overview/) page
-- Roadmap page [removed](https://github.com/decred/dcrweb/pull/857)
+- recruiting page removed and decred.org/recruiting now redirects to the [Contributing](https://docs.decred.org/contributing/overview/) page
+- roadmap page [removed](https://github.com/decred/dcrweb/pull/857)
 
 Other:
 
-- Most projects upgraded to build with Go 1.14 and dropped support of Go 1.12.
+- most projects upgraded to build with Go 1.14 and dropped support of Go 1.12.
 - @mm released DigiSign Oracle, a free and open source web app that helps end users verify digital signatures. It was created to help Decred users verify package signatures without having to use complicated command line programs. You can access it at [stakey.club](https://stakey.club/digisign-oracle/) or download the [source code](https://github.com/mmartins000/digisign-oracle) to your computer and open with a web browser.
 
 Dev activity stats for March: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
@@ -215,7 +214,7 @@ Nodes: Throughout [March](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from
 
 Probit [added](https://twitter.com/ProBit_Exchange/status/1235450770100649986) support for DCR/KRW and DCR/USDT pairs to their exchange.
 
-Exmo.com had a sudden DCR [outage](https://twitter.com/Exmo_Com/status/1240255377507303431) a few days after the Mar 13 fork, the services [resumed](https://twitter.com/Exmo_Com/status/1240627750005870592) the next day. Currently Exmo is the only integration [funded](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) by stakeholders.
+Exmo.com had a sudden DCR [outage](https://twitter.com/Exmo_Com/status/1240255377507303431) a few days after the Mar 13 fork, the services [resumed](https://twitter.com/Exmo_Com/status/1240627750005870592) the next day. Currently, Exmo is the only integration [funded](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) by stakeholders.
 
 [NOWPayments](https://nowpayments.io/) payment processor that was launched in 2019 by ChangeNOW supports DCR among [40+](https://nowpayments.io/supported-coins/) other assets.
 
@@ -262,7 +261,7 @@ Attended:
 
 - Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-la-plata-tickets-95666770887) - La Plata, Argentina. It was an introduction to Decred project in which @camilolwi, @tomee and @pablito talked about the fundamentals of Decred, its security and hybrid consensus model, governance, voting and how to become a contractor for the project. There were around 20 attendees to the meetup and a session of networking. ([photos](https://twitter.com/cryptorc_tech/status/1238180910513733634))
 - Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-en-uninet-business-school-caracas-venezuela-tickets-97157792573) - Caracas, Venezuela. The meetup was co-hosted by Uninet Business School and Innova Consultants. There were 15 attendees to the meetup, there was an introduction to Decred, its security and hybrid model, privacy, how to contribute, followed by a session of Q&A and networking. ([photos](https://twitter.com/Decred_ES/status/1235324847338795009))
-- Mar 4 - [Crypto and Blockchain 2020 and Beyond](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. This 80+ person event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (the event raised $1K while the entire the fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave joined a hour-long panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and than anyone else, and got a lot of follow-up meetings as a result of it". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200304-crypto-and-blockchain-2020-and-beyond-melbourne-australia.md), [video](https://twitter.com/DecredAustralia/status/1235390840307978245))
+- Mar 4 - [Crypto and Blockchain 2020 and Beyond](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. This 80+ person event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (the event raised $1K while the entire the fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave joined an hour-long panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and [sic] than anyone else, and got a lot of follow-up meetings as a result of it". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200304-crypto-and-blockchain-2020-and-beyond-melbourne-australia.md), [video](https://twitter.com/DecredAustralia/status/1235390840307978245))
 - Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela. Co-hosted by ClicTechNova y CoWorking Lab. The meetup was an introduction to Decred ecosystem, hybrid blockchain, governance mechanism, privacy, and elements that make Decred a DAO. There were ~50 attendees that asked interesting questions about social attacks on the network, how to contribute and the incentive model of DCR. ([photos](https://twitter.com/Decred_ES/status/1236079742643773440), [video](https://twitter.com/Decred_ES/status/1236080559752916998))
 - Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela. Co-hosted by El Dorado y Cointigo. The meetup was an introduction to Decred ecosystem, its governance structure and what makes it a different cryptocurrency from the rest. Around 30 people attended, several entrepreneurs and developers but also several new users of cryptocurrencies looking for more information about the technology and investment opportunities. ([photos](https://twitter.com/Decred_ES/status/1236337867095343104), [video](https://twitter.com/Decred_ES/status/1236340242698752001))
 - Mar 8 - [International Women's Day](https://www.meetup.com/GDGCasablanca/events/268661463/) - Casablanca, Morocco. The event was held at ENSAM, a University of Science. Most of the 70 attendees were data science students and developers. @arij gave a 1-hour talk about blockchains and Decred and a workshop afterwards: "What I've learned from my experiences talking and explaining blockchain technology and Decred, is that people are more interested when you show them how things really work with demo and videos, especially when it is their first time learning about it". ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org), [photos](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
@@ -274,7 +273,7 @@ Attended:
 - Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - Internet. @tomee and @camilolwi talked all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. ([video](https://www.youtube.com/watch?v=U07ZL_qFAQM))
 - Mar 27 - [Hablemos Decred 02](https://twitter.com/Decred_ES/status/1243214184793485314) - Internet. Second Spanish online meetup explored Jitsi to connect 13 participants from Argentina, Mexico, Bolivia, Chile, of which 7 were new to the project. This time the call started with an intro talk about Decred, a demo of Decrediton, and an open mic for questions and comments. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200327-hablemosdecred-02-internet.md))
 - Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian and @pablito got 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
-- Mar 30 - [Decred and Sound Money Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - Internet. The event was hosted by @eSizeDave and @zohand and joined by @Checkmate to discuss key topics such as sound money, the macroeconomic environment, gold, and Decred. Participants were quite impressed by the quality and left good fedback, one of them enjoying that it was "mentally stimulating". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200330-decred-and-sound-money-internet.md))
+- Mar 30 - [Decred and Sound Money Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - Internet. The event was hosted by @eSizeDave and @zohand and joined by @Checkmate to discuss key topics such as sound money, the macroeconomic environment, gold, and Decred. Participants were quite impressed by the quality and left good feedback, one of them enjoying that it was "mentally stimulating". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200330-decred-and-sound-money-internet.md))
 
 Canceled:
 
@@ -288,7 +287,7 @@ Upcoming:
 - May 14 - [BlockConf](https://blockconf.digital/) - Internet. @elian will talk about Decred in LATAM.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 - June or later - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
-- June or later - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
+- June or later - [Jalisco Talent Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
 - End of 2020 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. Moved from March.
 
 Postponed until further notice:
@@ -303,12 +302,12 @@ Selected articles:
 
 - Observing Ethereum Governance during the ProgPoW Debate by @Checkmate ([medium](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad))
 - Crypto Risk is Not What You Think by @Dustorf ([medium](https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70))
-- Power and Seigniorage in Proof of Stake by Ryan Watkins ([messari.io](https://messari.io/article/power-and-seigniorage-in-proof-of-stake)) - paywalled but there's also a companion [Twitter thread](https://twitter.com/RyanWatkins_/status/1234554810977918976) making the case that in pure PoS initial holders can stay in power forever
+- Power and Seigniorage in Proof of Stake by Ryan Watkins ([messari.io](https://messari.io/article/power-and-seigniorage-in-proof-of-stake)) - paywalled, but there's also a companion [Twitter thread](https://twitter.com/RyanWatkins_/status/1234554810977918976) making the case that in pure PoS initial holders can stay in power forever
 - Theory of Three Pillars in the Cypherpunk Social Contract by @Cato\_io ([medium](https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a))
 - Public Service, Pandemics and Crypto Networks by @mrbulb ([medium](https://medium.com/@decentpartners/public-service-pandemics-and-crypto-networks-379dce1594d1))
 - Decred: How Does Your Development Continue During the Bear Market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
 
-The Brazil marketing and events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media from an interesting "investment in Brazil" perspective (in Portuguese):
+The Brazil Marketing and Events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media from an interesting "investment in Brazil" perspective (in Portuguese):
 
 - "Decred's Community Allows More than 500,000 BRL to be Invested in Brazil" ([criptofacil.com](https://www.criptofacil.com/comunidade-decred-permite-que-mais-r-500-mil-sejam-investidos-brasil/))
 - "Cryptocurrency Will Invest More than Half a Million in Brazil" ([livecoins.com.br](https://livecoins.com.br/criptomoeda-vai-investir-mais-meio-milhao-brasil/))
@@ -329,7 +328,7 @@ Videos:
 
 Audio:
 
-- Decred in Depth Ep. 19 - Leo Zhang of Iterative Capital talks about Proof of Work mining, gives a first hand account of mining economics, and considers the benefits of a hybrid PoS component and formal stakeholder decision-making. ([libsyn](https://decredindepth.libsyn.com/leo-zhang-dcr-mining), [youtube](https://www.youtube.com/watch?v=iWi3nK0HIHE), [soundcloud](https://soundcloud.com/decredindepth/leo-zhang-dcr-mining))
+- Decred in Depth Ep. 19 - Leo Zhang of Iterative Capital talks about Proof of Work mining, gives a first-hand account of mining economics, and considers the benefits of a hybrid PoS component and formal stakeholder decision-making. ([libsyn](https://decredindepth.libsyn.com/leo-zhang-dcr-mining), [youtube](https://www.youtube.com/watch?v=iWi3nK0HIHE), [soundcloud](https://soundcloud.com/decredindepth/leo-zhang-dcr-mining))
 - Decred in Depth Ep. 21 - @Exitus talks about producing video content for the Decred DAO, becoming a contractor and the challenges crypto marketing faces during the bear market. ([libsyn](https://decredindepth.libsyn.com/-exitus-dcr-community-managment-media), [youtube](https://www.youtube.com/watch?v=oGi3NA14CZU))
 - Rough Consensus Ep. 2 - Distributed Consensus. @mr.black, @Checkmate and @permabullnino discuss the concept of triple entry accounting and how it provides a framework for analyzing consensus mechanisms. The theory is that PoW, PoS and hybrid security systems provide different security and ledger assurances. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
 - Rough Consensus Ep. 3 - The Long Road Ahead. @mr.black, @Checkmate and @permabullnino discuss the latest macro shift triggered by COVID-19, the popping of the longest equities bull market in history, and how cryptocurrencies can play a role in the future. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
@@ -372,7 +371,7 @@ Markets everywhere had a [very bad time](https://www.bloomberg.com/news/articles
 
 It was a challenging month for DeFi, as a sharp drop in the price of ETH strained the stability of the DAI stablecoin. When ETH price moves too much some DAI loans will be liquidated in auctions if their holders do not add more ETH to reach the required collateralization, but on this occasion the price appears to have moved too quickly for the liquidation auctions to keep up. This [article](https://medium.com/@whiterabbit_hq/black-thursday-for-makerdao-8-32-million-was-liquidated-for-0-dai-36b83cac56b6) explains how $8.32 million worth of DAI was liquidated for $0, as unforeseen conditions in the auction process (including ETH chain congestion) resulted in 36% of all liquidation auctions going to the highest bidder at $0.00. "The greatest Vault has lost ~35,000 ETH whereas the most successful liquidator has had a profit of 30,000 ETH". This left the Maker Foundation and community in a difficult [position](https://www.coindesk.com/defi-leader-makerdao-weighs-emergency-shutdown-following-eth-price-drop), considering changing the rules on the fly or triggering an emergency shutdown. The Foundation [decided](https://www.coindesk.com/makerdao-debts-grow-as-defi-leader-moves-to-stabilize-protocol) not to use its power to intervene directly by triggering a shutdown, and moved to introduce proposals that modified risk parameters and set up an auction of newly printed MKR tokens to pay the protocol debt and "refund CDPs that lost funds".
 
-The Steem-Sun conflict began last month when the Steemit company (and its "ninja mined" STEEM tokens) was acquired by Justin Sun - Steem (DPoS) witnesses adopted a hard fork to nullify those tokens, then Sun mobilized exchange support to oust the established witnesses and replace them with puppets that would not adopt the fork, preserving his STEEM tokens. In March the strategy of the Steem community changed, as an influential group decided to [migrate](https://www.coindesk.com/steem-will-hard-fork-in-just-hours-over-community-fears-of-justin-sun-power-grab) away from the Steem blockchain to a new one called Hive. Exchanges Binance and Huobi are said to be supportive of this move, in a remarkable turnaround from their actions last month where they voted with Sun. Prominent members of the Steem community thanked community members for withdrawing their STEEM from exchanges, to put pressure on exchanges to backtrack on supporting the Sun-powered witnesses. It seems the exchange operators were also misled about the significance of their votes in that context, believing that they were voting for a regular protocol upgrade.
+The Steem-Sun conflict began last month when the Steemit company (and its "ninja mined" STEEM tokens) was acquired by Justin Sun - Steem (DPoS) witnesses adopted a hard fork to nullify those tokens, then Sun mobilized exchange support to oust the established witnesses and replace them with puppets that would not adopt the fork, preserving his STEEM tokens. In March the strategy of the Steem community changed, as an influential group decided to [migrate](https://www.coindesk.com/steem-will-hard-fork-in-just-hours-over-community-fears-of-justin-sun-power-grab) away from the Steem blockchain to a new one called Hive. Exchanges Binance and Huobi are said to be supportive of this move, in a remarkable turnaround from their actions last month when they voted with Sun. Prominent members of the Steem community thanked community members for withdrawing their STEEM from exchanges, to put pressure on exchanges to backtrack on supporting the Sun-powered witnesses. It seems the exchange operators were also misled about the significance of their votes in that context, believing that they were voting for a regular protocol upgrade.
 
 Hive is the same as Steem in most regards, with 1 STEEM being exchangeable for 1 HIVE - the main difference is that Sun's Steemit STEEM tokens will not be redeemable on the HIVE chain, effectively cutting them out of the ecosystem. When this [story](https://www.coindesk.com/splinter-cryptocurrency-hive-outperforms-justin-suns-steem-after-one-week-trading) was written the price of HIVE was almost double that of STEEM, but as of Apr 4 the two tokens are trading for similar prices. This case should be of interest to those who say coin voting is plutocratic, as it shows what can happen when whales try to use their coins to impose their will on an unwilling community.
 
