--- a/journal/202003.md
+++ b/journal/202003.md
@@ -32,8 +32,8 @@ dcrd has less than 16% code overlap with btcd meaning that 84% is the new develo
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
-- `fundrawtransaction` command [implemented](https://github.com/decred/dcrwallet/pull/1706) that adds unsigned inputs and change output to a raw transaction
-- wallet operations [switched](https://github.com/decred/dcrwallet/pull/1648) to use version 2 commited filters (v1 filters are deprecated but are still served by the network and used by dcrwallet, next release will use v2 filters)
+- `fundrawtransaction` command [implemented](https://github.com/decred/dcrwallet/pull/1706) that adds unsigned inputs and change the output to a raw transaction
+- wallet operations [switched](https://github.com/decred/dcrwallet/pull/1648) to use version 2 commitment filters (v1 filters are deprecated but are still served by the network and used by dcrwallet, next release will use v2 filters)
 - `getaddressesbyaccount` command [fixed](https://github.com/decred/dcrwallet/pull/1695) to also return imported addresses for the `imported` account
 - unencrypted P2SH redeem scripts are [moved](https://github.com/decred/dcrwallet/pull/1688) to address manager storage. This simplifies storage and removes the requirement to unlock the wallet to view or store the scripts.
 - internal improvements to efficiency and semantics
@@ -55,9 +55,9 @@ In development:
 - [invalidate](https://github.com/decred/politeia/pull/1159) sessions on password change
 - test improvements and bug fixes
 
-tlog integration has begun and is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to take ~2 months. In [July 2019](201907.md#development) we've inaccurately reported the start of tlog integration but that work was actually a reference implementation to serve as a proof of concept and demonstrate that Google's [Trillian](https://github.com/google/trillian) data store can replace existing Git backend. It was [merged](https://github.com/decred/politeia/pull/951) in August and contained a [client/server](https://github.com/decred/politeia/tree/master/tlog) with basic functionality for storing documents. This experience gave enough insight to know that it will work. Next step is to actually write a Politeia backend that uses Trillian.
+tlog integration has begun and is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to take ~2 months. In [July 2019](201907.md#development) we've inaccurately reported the start of tlog integration but that work was actually a reference implementation to serve as a proof of concept and demonstrate that Google's [Trillian](https://github.com/google/trillian) data store can replace existing Git backend. It was [merged](https://github.com/decred/politeia/pull/951) in August and contained a [client/server](https://github.com/decred/politeia/tree/master/tlog) with basic functionality for storing documents. This experience gave enough insight to know that it will work. The next step is to write a Politeia backend that uses Trillian.
 
-Major advantages of the tlog backend is it will make Politeia more scalable and allow censoring content after it's been made public, while keeping the audit trail of all data ever submitted. It will also allow a proper fix of the duplicate comments bug.
+The major advantage of the tlog backend is it will make Politeia more scalable and allow censoring content after it's been made public while keeping the audit trail of all data ever submitted. It will also allow a proper fix of the duplicate comments bug.
 
 CMS:
 
@@ -65,7 +65,7 @@ CMS:
 - ability to [deactivate](https://github.com/decred/politeia/pull/1154) temporary contractor account on paid invoice and require admin approval to allow another invoice
 - [preload](https://github.com/decred/politeiagui/pull/1829) user info to assist in authoring invoices
 - redesign work started in October finally [merged](https://github.com/decred/politeiagui/pull/1828). This large change adds 9K and deletes 24K lines of code.
-- { any comments? what is pi-ui and what motivated it? why redesign is neccessary for an internal system, or is it more than just a new skin? dark mode? }
+- { any comments? what is pi-ui and what motivated it? why redesign is necessary for an internal system, or is it more than just a new skin? dark mode? }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
@@ -105,7 +105,7 @@ In development:
 
 A total of 19 pull requests merged from 6 contributors adding 11K and deleting 3K lines of code (commit summary [here](https://github.com/decred/dcrdex/compare/94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d...d3bd07f822200041092bdc85f5c1b752b3c9ee24)).
 
-Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/status/1245075450625511425) the first order-driven atomic swap on testnet!
+Congratulations to the dcrdex team for [coordinating](https://twitter.com/chappjc/status/1245075450625511425) the first order-driven atomic swap on testnet!
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
@@ -224,7 +224,7 @@ DCR was [added](https://twitter.com/Checkmatey/status/1244030247558729729) to FT
 
 User AGspearo was not able to access their [funds](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) due to the VSP d1pool.com shutting down without notice and them not having access to their redeem script. AGspearo spent a lot of time on support trying to resolve this issue but ultimately they were unable to get their funds. @davecgh broke down the issue as a [comment](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkiac45) and also said a possible consensus change might solve these [issues](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkku35k). If you are reading this and do not have your redeem scripts backed up please take this a warning and do a [backup](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script) and store it along with your seed.
 
-Some VSPs that had broken signup pages/out of date/returning errors had been [put on notice](https://github.com/decred/dcrwebapi/pulls?q=is%3Apr+author%3Ajholdstock+created%3A2020-03-01..2020-03-31) that they will be removed. Some of them have responded and fixed the issues. raqamiya.net, tokensmart.io and dcrpos.idcray.com have been removed since they failed to respond.
+Some VSPs that had broken signup pages/out of date/returning errors had been [put on notice](https://github.com/decred/dcrwebapi/pulls?q=is%3Apr+author%3Ajholdstock+created%3A2020-03-01..2020-03-31) that they will be removed. Some of them have responded and fixed the issues. raqamiya.net, tokensmart.io, and dcrpos.idcray.com have been removed since they failed to respond.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -232,7 +232,7 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 [Decred in Depth](https://decredindepth.libsyn.com) released two new episodes in March and one in early April, while [Rough Consensus](https://roughconsensus.libsyn.com/) also released 2 episodes (see [Media](#media) below).
 
-@Dustorf [posted](https://proposals.decred.org/proposals/c830ea5afea45a0aabf4092d1bea51fb10b8bfa2d8474aac03224f0f94d3d1af/comments/56) that he will be operating in a reduced capacity for the next couple months and that the cost of the proposal will be reduced accordingly. The executions affected include: newsletter, original content generation, Decred Assembly, PR and release coordination, and update work. This specifically means that the DEX release will have to be managed by the developers and the community at large.
+@Dustorf [posted](https://proposals.decred.org/proposals/c830ea5afea45a0aabf4092d1bea51fb10b8bfa2d8474aac03224f0f94d3d1af/comments/56) that he will be operating in a reduced capacity for the next couple months and that the cost of the proposal will be reduced accordingly. The executions affected include: newsletter, original content generation, Decred Assembly, PR, and release coordination, and update work. This specifically means that the DEX release will have to be managed by the developers and the community at large.
 
 @dezryth [posted](https://scottrchristian.com/2020/03/15/dezryth-proposal-updates/) a second update about his operation of Decred's Facebook account for the month of February. This one is more detailed and includes stats for each post, comparison to competitors and shares some ideas to try next. @dezryth acknowledges that current stats are not great and that organic following is hard to build, but on the good side active posting brought a 30% increase of daily views.
 
@@ -259,20 +259,20 @@ Additionally, the following news coverage was secured:
 
 Attended:
 
-- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-la-plata-tickets-95666770887) - La Plata, Argentina. It was an introduction to Decred project in which @camilolwi, @tomee and @pablito talked about the fundamentals of Decred, its security and hybrid consensus model, governance, voting and how to become a contractor for the project. There were around 20 attendees to the meetup and a session of networking. ([photos](https://twitter.com/cryptorc_tech/status/1238180910513733634))
+- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-la-plata-tickets-95666770887) - La Plata, Argentina. It was an introduction to Decred project in which @camilolwi, @tomee, and @pablito talked about the fundamentals of Decred, its security and hybrid consensus model, governance, voting and how to become a contractor for the project. There were around 20 attendees to the meetup and a session of networking. ([photos](https://twitter.com/cryptorc_tech/status/1238180910513733634))
 - Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-en-uninet-business-school-caracas-venezuela-tickets-97157792573) - Caracas, Venezuela. The meetup was co-hosted by Uninet Business School and Innova Consultants. There were 15 attendees to the meetup, there was an introduction to Decred, its security and hybrid model, privacy, how to contribute, followed by a session of Q&A and networking. ([photos](https://twitter.com/Decred_ES/status/1235324847338795009))
-- Mar 4 - [Crypto and Blockchain 2020 and Beyond](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. This 80+ person event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (the event raised $1K while the entire the fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave joined an hour-long panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and [sic] than anyone else, and got a lot of follow-up meetings as a result of it". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200304-crypto-and-blockchain-2020-and-beyond-melbourne-australia.md), [video](https://twitter.com/DecredAustralia/status/1235390840307978245))
-- Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela. Co-hosted by ClicTechNova y CoWorking Lab. The meetup was an introduction to Decred ecosystem, hybrid blockchain, governance mechanism, privacy, and elements that make Decred a DAO. There were ~50 attendees that asked interesting questions about social attacks on the network, how to contribute and the incentive model of DCR. ([photos](https://twitter.com/Decred_ES/status/1236079742643773440), [video](https://twitter.com/Decred_ES/status/1236080559752916998))
-- Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela. Co-hosted by El Dorado y Cointigo. The meetup was an introduction to Decred ecosystem, its governance structure and what makes it a different cryptocurrency from the rest. Around 30 people attended, several entrepreneurs and developers but also several new users of cryptocurrencies looking for more information about the technology and investment opportunities. ([photos](https://twitter.com/Decred_ES/status/1236337867095343104), [video](https://twitter.com/Decred_ES/status/1236340242698752001))
+- Mar 4 - [Crypto and Blockchain 2020 and Beyond](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. This 80+ person event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (the event raised $1K while the entire fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave joined an hour-long panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and [sic] than anyone else, and got a lot of follow-up meetings as a result of it". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200304-crypto-and-blockchain-2020-and-beyond-melbourne-australia.md), [video](https://twitter.com/DecredAustralia/status/1235390840307978245))
+- Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela. Co-hosted by ClicTechNova y CoWorking Lab. The meetup was an introduction to the Decred ecosystem, hybrid blockchain, governance mechanism, privacy, and elements that make Decred a DAO. There were ~50 attendees that asked interesting questions about social attacks on the network, how to contribute and the incentive model of DCR. ([photos](https://twitter.com/Decred_ES/status/1236079742643773440), [video](https://twitter.com/Decred_ES/status/1236080559752916998))
+- Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela. Co-hosted by El Dorado y Cointigo. The meetup was an introduction to the Decred ecosystem, its governance structure and what makes it a different cryptocurrency from the rest. Around 30 people attended, several entrepreneurs and developers but also several new users of cryptocurrencies looking for more information about the technology and investment opportunities. ([photos](https://twitter.com/Decred_ES/status/1236337867095343104), [video](https://twitter.com/Decred_ES/status/1236340242698752001))
 - Mar 8 - [International Women's Day](https://www.meetup.com/GDGCasablanca/events/268661463/) - Casablanca, Morocco. The event was held at ENSAM, a University of Science. Most of the 70 attendees were data science students and developers. @arij gave a 1-hour talk about blockchains and Decred and a workshop afterwards: "What I've learned from my experiences talking and explaining blockchain technology and Decred, is that people are more interested when you show them how things really work with demo and videos, especially when it is their first time learning about it". ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org), [photos](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
-- Mar 12 - [Bitcoin Woman to Woman](https://twitter.com/bitcoinemb/status/1233500964566523911) - Mexico City, Mexico. Co-hosted by the Bitcoin Embassy, the ~30 person meetup was to discuss women's involvement in the cryptocurrency industry and how to empower women to use crypto. @francov\_ did a presentation on how to contribute to Decred project and her experience working in the industry. "The highlight of the talk was to express that we do not need your title, gender, nationality, age, even your real name, we only need your talent and your aspiration to help the Decred ecosystem grow". The meetup was followed by a networking session. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-bitcoin-woman-to-woman-mexico-city-mexico.md))
-- Mar 12 - [Decred Meetup](https://www.meetup.com/es-ES/BitcoinBlockchainUruguay/events/269160706/) - Montevideo, Uruguay. Around 25 people attended the meetup. @tomee presented an introduction to Decred and its security, adaptability and sustainability, Politeia, governance and how to contribute. The meetup was also a networking session and some of the people knew the project from Labitconf. (photos: [1](https://twitter.com/ivarese/status/1238628854379536389), [2](https://twitter.com/cryptorc_tech/status/1241081659669315585))
+- Mar 12 - [Bitcoin Woman to Woman](https://twitter.com/bitcoinemb/status/1233500964566523911) - Mexico City, Mexico. Co-hosted by the Bitcoin Embassy, the ~30 person meetup was to discuss women's involvement in the cryptocurrency industry and how to empower women to use crypto. @francov\_ did a presentation on how to contribute to the Decred project and her experience working in the industry. "The highlight of the talk was to express that we do not need your title, gender, nationality, age, even your real name, we only need your talent and your aspiration to help the Decred ecosystem grow". The meetup was followed by a networking session. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-bitcoin-woman-to-woman-mexico-city-mexico.md))
+- Mar 12 - [Decred Meetup](https://www.meetup.com/es-ES/BitcoinBlockchainUruguay/events/269160706/) - Montevideo, Uruguay. Around 25 people attended the meetup. @tomee presented an introduction to Decred and its security, adaptability, and sustainability, Politeia, governance and how to contribute. The meetup was also a networking session and some of the people knew the project from Labitconf. (photos: [1](https://twitter.com/ivarese/status/1238628854379536389), [2](https://twitter.com/cryptorc_tech/status/1241081659669315585))
 - Mar 12 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1237552322596593665) - Panama City, Panama. The event was rescheduled to Oct 15-16, but this change occurred 24 hours before the event when some speakers were already in the area (~35 people). The event staff took the opportunity and hosted a small meetup where presenters got the chance to network and to know about the projects from close up. @adcade and @elian talked with a few representatives and secured an [interview](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market) for Spanish Cointelegraph. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-blockchain-summit-latam-meetup-panama-city-panama.md))
 - Mar 12 - [Hablemos Decred 01](https://twitter.com/Decred_ES/status/1238242352306614273) - Internet. "Let's Talk Decred", the first Spanish online meeting used Decred's Discord server. Most questions were about Decred's PoS voting system. Those who had some prior knowledge of crypto asked how to stake, and those who didn't wanted to know more about voting rights and what can stakeholders do with their tickets. About a third of ~15 people were new to the project. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-hablemosdecred-01-internet.md))
 - Mar 18 - [Exchanges in LATAM](https://twitter.com/Decred_ES/status/1240428280756310018) - Internet. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and it was learned that online talks should be 30 min or less.
 - Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - Internet. @tomee and @camilolwi talked all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. ([video](https://www.youtube.com/watch?v=U07ZL_qFAQM))
 - Mar 27 - [Hablemos Decred 02](https://twitter.com/Decred_ES/status/1243214184793485314) - Internet. Second Spanish online meetup explored Jitsi to connect 13 participants from Argentina, Mexico, Bolivia, Chile, of which 7 were new to the project. This time the call started with an intro talk about Decred, a demo of Decrediton, and an open mic for questions and comments. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200327-hablemosdecred-02-internet.md))
-- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian and @pablito got 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
+- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in the Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian, and @pablito got 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with the Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
 - Mar 30 - [Decred and Sound Money Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - Internet. The event was hosted by @eSizeDave and @zohand and joined by @Checkmate to discuss key topics such as sound money, the macroeconomic environment, gold, and Decred. Participants were quite impressed by the quality and left good feedback, one of them enjoying that it was "mentally stimulating". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200330-decred-and-sound-money-internet.md))
 
 Canceled:
@@ -282,7 +282,7 @@ Canceled:
 Upcoming:
 
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
-- Apr 9 - [Hablemos Decred 03](https://twitter.com/Decred_ES/status/1245526903110414336) - Internet. 3rd online meeting of Spanish Decred community hosted in [Jitsi](https://meet.jit.si/HablemosDecred).
+- Apr 9 - [Hablemos Decred 03](https://twitter.com/Decred_ES/status/1245526903110414336) - Internet. 3rd online meeting of the Spanish Decred community hosted in [Jitsi](https://meet.jit.si/HablemosDecred).
 - Apr 16 - [Decred Webinar](https://twitter.com/Decred_ES/status/1245452957417684992) - Internet. The topic will be "Let's talk about cryptocurrencies and the future of money" - a webinar hosted by Ibero (university) to discuss crypto and give an overview of Decred.
 - May 14 - [BlockConf](https://blockconf.digital/) - Internet. @elian will talk about Decred in LATAM.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
@@ -330,8 +330,8 @@ Audio:
 
 - Decred in Depth Ep. 19 - Leo Zhang of Iterative Capital talks about Proof of Work mining, gives a first-hand account of mining economics, and considers the benefits of a hybrid PoS component and formal stakeholder decision-making. ([libsyn](https://decredindepth.libsyn.com/leo-zhang-dcr-mining), [youtube](https://www.youtube.com/watch?v=iWi3nK0HIHE), [soundcloud](https://soundcloud.com/decredindepth/leo-zhang-dcr-mining))
 - Decred in Depth Ep. 21 - @Exitus talks about producing video content for the Decred DAO, becoming a contractor and the challenges crypto marketing faces during the bear market. ([libsyn](https://decredindepth.libsyn.com/-exitus-dcr-community-managment-media), [youtube](https://www.youtube.com/watch?v=oGi3NA14CZU))
-- Rough Consensus Ep. 2 - Distributed Consensus. @mr.black, @Checkmate and @permabullnino discuss the concept of triple entry accounting and how it provides a framework for analyzing consensus mechanisms. The theory is that PoW, PoS and hybrid security systems provide different security and ledger assurances. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
-- Rough Consensus Ep. 3 - The Long Road Ahead. @mr.black, @Checkmate and @permabullnino discuss the latest macro shift triggered by COVID-19, the popping of the longest equities bull market in history, and how cryptocurrencies can play a role in the future. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
+- Rough Consensus Ep. 2 - Distributed Consensus. @mr.black, @Checkmate, and @permabullnino discuss the concept of triple entry accounting and how it provides a framework for analyzing consensus mechanisms. The theory is that PoW, PoS and hybrid security systems provide different security and ledger assurances. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
+- Rough Consensus Ep. 3 - The Long Road Ahead. @mr.black, @Checkmate, and @permabullnino discuss the latest macro shift triggered by COVID-19, the popping of the longest equities bull market in history, and how cryptocurrencies can play a role in the future. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
 - POV Crypto Podcast Ep. 127 - Hard Money in the Time of Brrr with @permabullnino ([libsyn](https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino), Decred mentioned around 30 min mark)
 - What is Decred? by @elian (in Spanish, [criptotendencias.com](https://www.criptotendencias.com/podcast/episodio-30-que-es-decred-entrevista-con-elian-huesca-community-builder-business-dev-del-proyecto/))
 - Decred Brief by @elian (in Spanish, [Territorio Bitcoin](https://www.ivoox.com/episodio-111-especial-comunidad-blockchain-cuarentena-audios-mp3_rf_49382826_1.html))
@@ -340,7 +340,7 @@ Audio:
 
 Comm systems news:
 
-- A guide how to join Decred Matrix community was published at [docs.decred.org](https://docs.decred.org/getting-started/joining-matrix-channels/). If you prefer to be guided by the Stakey, a slightly different version is available at [dcrcomic.org](https://dcrcomic.org/guide-enter-the-matrix.html).
+- A guide on how to join the Decred Matrix community was published at [docs.decred.org](https://docs.decred.org/getting-started/joining-matrix-channels/). If you prefer to be guided by the Stakey, a slightly different version is available at [dcrcomic.org](https://dcrcomic.org/guide-enter-the-matrix.html).
 - FYI you can watch the [r/decred comment feed](https://www.reddit.com/r/decred/comments/) to never miss a new comment.
 
 Selected Reddit posts:
@@ -369,11 +369,11 @@ Fred Wilson [noted](https://avc.com/2020/03/correlation-and-market-meltdowns/) t
 
 Markets everywhere had a [very bad time](https://www.bloomberg.com/news/articles/2020-03-08/yen-slides-as-oil-price-war-adds-to-global-worries-markets-wrap) as the severity of the COVID-19 situation became clear and nations began to lock down. Cryptocurrency prices declined as much or more than most other assets, all Decred meetups and events are canceled or moving online, and some contributors have more childcare to do than before, but those seem to the only changes that are directly relevant to Decred. Nevertheless, the situation obviously has an effect on all of us and the broader macroeconomic environment and outlook. Stay safe.
 
-It was a challenging month for DeFi, as a sharp drop in the price of ETH strained the stability of the DAI stablecoin. When ETH price moves too much some DAI loans will be liquidated in auctions if their holders do not add more ETH to reach the required collateralization, but on this occasion the price appears to have moved too quickly for the liquidation auctions to keep up. This [article](https://medium.com/@whiterabbit_hq/black-thursday-for-makerdao-8-32-million-was-liquidated-for-0-dai-36b83cac56b6) explains how $8.32 million worth of DAI was liquidated for $0, as unforeseen conditions in the auction process (including ETH chain congestion) resulted in 36% of all liquidation auctions going to the highest bidder at $0.00. "The greatest Vault has lost ~35,000 ETH whereas the most successful liquidator has had a profit of 30,000 ETH". This left the Maker Foundation and community in a difficult [position](https://www.coindesk.com/defi-leader-makerdao-weighs-emergency-shutdown-following-eth-price-drop), considering changing the rules on the fly or triggering an emergency shutdown. The Foundation [decided](https://www.coindesk.com/makerdao-debts-grow-as-defi-leader-moves-to-stabilize-protocol) not to use its power to intervene directly by triggering a shutdown, and moved to introduce proposals that modified risk parameters and set up an auction of newly printed MKR tokens to pay the protocol debt and "refund CDPs that lost funds".
+It was a challenging month for DeFi, as a sharp drop in the price of ETH strained the stability of the DAI stablecoin. When ETH price moves too much some DAI loans will be liquidated in auctions if their holders do not add more ETH to reach the required collateralization, but on this occasion, the price appears to have moved too quickly for the liquidation auctions to keep up. This [article](https://medium.com/@whiterabbit_hq/black-thursday-for-makerdao-8-32-million-was-liquidated-for-0-dai-36b83cac56b6) explains how $8.32 million worth of DAI was liquidated for $0, as unforeseen conditions in the auction process (including ETH chain congestion) resulted in 36% of all liquidation auctions going to the highest bidder at $0.00. "The greatest Vault has lost ~35,000 ETH whereas the most successful liquidator has had a profit of 30,000 ETH". This left the Maker Foundation and community in a difficult [position](https://www.coindesk.com/defi-leader-makerdao-weighs-emergency-shutdown-following-eth-price-drop), considering changing the rules on the fly or triggering an emergency shutdown. The Foundation [decided](https://www.coindesk.com/makerdao-debts-grow-as-defi-leader-moves-to-stabilize-protocol) not to use its power to intervene directly by triggering a shutdown, and moved to introduce proposals that modified risk parameters and set up an auction of newly printed MKR tokens to pay the protocol debt and "refund CDPs that lost funds".
 
 The Steem-Sun conflict began last month when the Steemit company (and its "ninja mined" STEEM tokens) was acquired by Justin Sun - Steem (DPoS) witnesses adopted a hard fork to nullify those tokens, then Sun mobilized exchange support to oust the established witnesses and replace them with puppets that would not adopt the fork, preserving his STEEM tokens. In March the strategy of the Steem community changed, as an influential group decided to [migrate](https://www.coindesk.com/steem-will-hard-fork-in-just-hours-over-community-fears-of-justin-sun-power-grab) away from the Steem blockchain to a new one called Hive. Exchanges Binance and Huobi are said to be supportive of this move, in a remarkable turnaround from their actions last month when they voted with Sun. Prominent members of the Steem community thanked community members for withdrawing their STEEM from exchanges, to put pressure on exchanges to backtrack on supporting the Sun-powered witnesses. It seems the exchange operators were also misled about the significance of their votes in that context, believing that they were voting for a regular protocol upgrade.
 
-Hive is the same as Steem in most regards, with 1 STEEM being exchangeable for 1 HIVE - the main difference is that Sun's Steemit STEEM tokens will not be redeemable on the HIVE chain, effectively cutting them out of the ecosystem. When this [story](https://www.coindesk.com/splinter-cryptocurrency-hive-outperforms-justin-suns-steem-after-one-week-trading) was written the price of HIVE was almost double that of STEEM, but as of Apr 4 the two tokens are trading for similar prices. This case should be of interest to those who say coin voting is plutocratic, as it shows what can happen when whales try to use their coins to impose their will on an unwilling community.
+Hive is the same as Steem in most regards, with 1 STEEM being exchangeable for 1 HIVE - the main difference is that Sun's Steemit STEEM tokens will not be redeemable on the HIVE chain, effectively cutting them out of the ecosystem. When this [story](https://www.coindesk.com/splinter-cryptocurrency-hive-outperforms-justin-suns-steem-after-one-week-trading) was written the price of HIVE was almost double that of STEEM, but as of Apr 4, the two tokens are trading for similar prices. This case should be of interest to those who say coin voting is plutocratic, as it shows what can happen when whales try to use their coins to impose their will on an unwilling community.
 
 It has been a good month for people who like to buy, hold or sell cryptocurrency without being considered a criminal. The governments in [South Korea](https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/) and supreme court in [India](https://news.bitcoin.com/bitcoin-legal-india-supreme-court-verdict-cryptocurrency/) making moves to nullify previously imposed restrictions on cryptocurrency trading.
 
@@ -408,7 +408,7 @@ Retrospective and a bit of trivia from @bee:
 
 ## About This Issue
 
-This is issue 24 of Decred Journal. Index of all issues, mirrors and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 24 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
