--- a/journal/202003.md
+++ b/journal/202003.md
@@ -284,8 +284,9 @@ Upcoming:
 
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
 - Apr 9 - [Hablemos Decred 03](https://twitter.com/Decred_ES/status/1245526903110414336) - Internet. 3rd online meeting of the Spanish Decred community hosted in [Jitsi](https://meet.jit.si/HablemosDecred).
+- Apr 13-17 - [Jalisco Talent Land @ Home](https://www.talent-land.tv/) - Internet. In a panel called "Decred, crypto and the future of money" Decred LATAM team will give a brief on Decred and explore how crypto will transform remote work and our interaction with money. The panel will be streamed on [talent-land.tv](https://www.talent-land.tv/) on Apr 15, 21:00 (CST, UTC-5).
 - Apr 16 - [Decred Webinar](https://twitter.com/Decred_ES/status/1245452957417684992) - Internet. The topic will be "Let's talk about cryptocurrencies and the future of money" - a webinar hosted by Ibero (university) to discuss crypto and give an overview of Decred.
-- May 14 - [BlockConf](https://blockconf.digital/) - Internet. @elian will talk about Decred in LATAM.
+- May 14 - [BlockConf](https://blockconf.digital/) - Internet. Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 - June or later - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
 - June or later - [Jalisco Talent Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
