--- a/journal/202003.md
+++ b/journal/202003.md
@@ -66,7 +66,8 @@ CMS:
 - ability to [deactivate](https://github.com/decred/politeia/pull/1154) temporary contractor account on paid invoice and require admin approval to allow another invoice
 - [preload](https://github.com/decred/politeiagui/pull/1829) user info to assist in authoring invoices
 - redesign work started in October finally [merged](https://github.com/decred/politeiagui/pull/1828). This large change adds 9K and deletes 24K lines of code.
-- { any comments? what is pi-ui and what motivated it? why redesign is necessary for an internal system, or is it more than just a new skin? dark mode? }
+
+Behind the visual updates, redesign of the CMS concludes the [process](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$158644942810878cUwaw:decred.org) of migrating politeiagui code from [snew-classic-ui](https://github.com/decred/snew-classic-ui) to [pi-ui](https://github.com/decred/pi-ui) library. Back in 2018 snew allowed to get Politeia out quickly with Reddit-style look and feel, but it quickly became hard to develop with. Building pi-ui and switching to it improved code modularization and allowed flexibility to compose and style the UI components the way it was required to match the design specs, as well as performance gains.
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
