--- a/journal/202003.md
+++ b/journal/202003.md
@@ -98,13 +98,14 @@ In development:
 
 [dcrdex](https://github.com/decred/dcrdex):
 
-- [RPC client](https://github.com/decred/dcrdex/pull/181) for DEX client's RPC server (_ouch_)
-- ability to [place orders](https://github.com/decred/dcrdex/pull/195) through the GUI
-- client account [backup and restore](https://github.com/decred/dcrdex/pull/210) { how is this different from 183 reported in Feb? }
-- { handling of `epoch_order` (188) and `match_proof` (189) - is it notable? if yes, how to present? }
-- added [match negotiation](https://github.com/decred/dcrdex/pull/213) { is it client, server or both? anything to add to better explain this change? }
-- added [cancellation ratio](https://github.com/decred/dcrdex/pull/206) computation to track if clients abuse order cancellation
+- command-line [control app](https://github.com/decred/dcrdex/pull/181) for the DEX client
+- ability to [place orders](https://github.com/decred/dcrdex/pull/195) through the client in-browser GUI
+- [backup and restore](https://github.com/decred/dcrdex/pull/210) for client account data like keys and server URL (an earlier [#183](https://github.com/decred/dcrdex/pull/183) added backup of client order data)
+- client tracking of [epoch orders](https://github.com/decred/dcrdex/pull/188) and verification of order [shuffling and matching](https://github.com/decred/dcrdex/pull/189) performed at the end of the epoch
+- [cancellation ratio](https://github.com/decred/dcrdex/pull/206) computation that allows the server to reliably track user's completed vs canceled orders, with the ability to reconstruct any user's recent order history from the database. This is an important part of community conduct enforcement.
 - codebase refactoring and cleanup
+
+A major milestone is the completion of [match negotiation](https://github.com/decred/dcrdex/pull/213). This is the last big piece of the client that finally lets it execute a swap. The PR specifically makes the client go through the entire swap process (match negotiation), communicating with the server, performing necessary auditing of counterparty transactions, and creating and broadcasting the client's own contract and redeem transactions as required by the swap process.
 
 A total of 19 pull requests merged from 6 contributors adding 11K and deleting 3K lines of code (commit summary [here](https://github.com/decred/dcrdex/compare/94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d...d3bd07f822200041092bdc85f5c1b752b3c9ee24)).
 
@@ -425,5 +426,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian, degeri, l1ndseymm, kozel, pablito, richardred, s\_ben
-- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, guisso, jholdstock, jrick, lukebp, matheusd, michae2xl, raedah
+- reviews and feedback: adcade, ammarooni, chappjc, davecgh, emiliomann, guisso, jholdstock, jrick, lukebp, matheusd, michae2xl, raedah
 - title image: {}
