Media use sentence case

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -307,38 +307,38 @@ Postponed until further notice:
 
 Selected articles:
 
-- Observing Ethereum Governance during the ProgPoW Debate by @Checkmate ([medium](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad))
-- Crypto Risk is Not What You Think by @Dustorf ([medium](https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70))
-- Theory of Three Pillars in the Cypherpunk Social Contract by @Cato\_io ([medium](https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a))
-- Public Service, Pandemics and Crypto Networks by @mrbulb ([medium](https://medium.com/@decentpartners/public-service-pandemics-and-crypto-networks-379dce1594d1))
-- Decred: How Does Your Development Continue During the Bear Market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
+- Observing Ethereum governance during the ProgPoW debate by @Checkmate ([medium](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad))
+- Crypto risk is not what you think by @Dustorf ([medium](https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70))
+- Theory of three pillars in the cypherpunk social contract by @Cato\_io ([medium](https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a))
+- Public service, pandemics and crypto networks by @mrbulb ([medium](https://medium.com/@decentpartners/public-service-pandemics-and-crypto-networks-379dce1594d1))
+- Decred: how does your development continue during the bear market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
 
 The Brazil Marketing and Events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media from an interesting "investment in Brazil" perspective (in Portuguese):
 
-- "Decred's Community Allows More than 500,000 BRL to be Invested in Brazil" ([criptofacil.com](https://www.criptofacil.com/comunidade-decred-permite-que-mais-r-500-mil-sejam-investidos-brasil/))
-- "Cryptocurrency Will Invest More than Half a Million in Brazil" ([livecoins.com.br](https://livecoins.com.br/criptomoeda-vai-investir-mais-meio-milhao-brasil/))
-- "'Whales' Approve and Decred Can Invest More than 500,000BRL to Promote Cryptocurrency in Brazil" ([cointelegraph.com.br](https://cointelegraph.com.br/news/decred-pode-investir-ate-us-500-mil-para-promover-criptomoeda-no-brasil)) - this one is poorly written and is based on another interview (@emiliomann)
-- "The Cryptocurrencies that Invest the Most in Brazil" ([cointimes.com.br](https://cointimes.com.br/as-criptomoedas-que-mais-investem-no-brasil/))
+- "Decred's community allows more than 500,000 BRL to be invested in Brazil" ([criptofacil.com](https://www.criptofacil.com/comunidade-decred-permite-que-mais-r-500-mil-sejam-investidos-brasil/))
+- "Cryptocurrency will invest more than half a million in Brazil" ([livecoins.com.br](https://livecoins.com.br/criptomoeda-vai-investir-mais-meio-milhao-brasil/))
+- "'Whales' approve and Decred can invest more than 500,000BRL to promote cryptocurrency in Brazil" ([cointelegraph.com.br](https://cointelegraph.com.br/news/decred-pode-investir-ate-us-500-mil-para-promover-criptomoeda-no-brasil)) - this one is poorly written and is based on another interview (@emiliomann)
+- "The cryptocurrencies that invest the most in Brazil" ([cointimes.com.br](https://cointimes.com.br/as-criptomoedas-que-mais-investem-no-brasil/))
 
 Translations:
 
-- Theory of Three Pillars in the Cypherpunk Social Contract - [in Spanish](https://medium.com/decred-es/teor%C3%ADa-de-los-tres-pilares-en-el-contrato-social-del-cypherpunk-40f569836b6a) by @francov\_
+- Theory of three pillars in the cypherpunk social contract - [in Spanish](https://medium.com/decred-es/teor%C3%ADa-de-los-tres-pilares-en-el-contrato-social-del-cypherpunk-40f569836b6a) by @francov\_
 - Decred Technical Brief - [in Arabic](https://insaf01.github.io/decred-arabic/articles/decred-technical-brief-ar.html) by @arij
 - Decred Journal February 2020 was translated to Arabic (@arij), Chinese (@Dominic) and Spanish (@francov\_). All three are stored [in Git](https://github.com/xaur/decred-news/blob/docs/guidelines.md#why-git) which helps to preserve the work long-term and protect it from censorship. Thank you all for spreading the word!
 
 Videos:
 
-- Decred's 2020 Marketing and Publishing Proposals for the USA & Brazil Breakdown by @Exitus ([youtube](https://www.youtube.com/watch?v=Liol1lLCinQ))
-- Decred Bi-Weekly News Update - March 31st, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=MBi7d263HvE))
-- Decred Bi-Weekly News Update - March 12th, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=N4U1FwYUaKA))
+- Decred's 2020 marketing and publishing proposals for the USA & Brazil breakdown by @Exitus ([youtube](https://www.youtube.com/watch?v=Liol1lLCinQ))
+- Decred bi-Weekly news update - March 31st, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=MBi7d263HvE))
+- Decred bi-Weekly news update - March 12th, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=N4U1FwYUaKA))
 
 Audio:
 
 - Decred in Depth Ep. 19 - Leo Zhang of Iterative Capital talks about Proof of Work mining, gives a first-hand account of mining economics, and considers the benefits of a hybrid PoS component and formal stakeholder decision-making. ([libsyn](https://decredindepth.libsyn.com/leo-zhang-dcr-mining), [youtube](https://www.youtube.com/watch?v=iWi3nK0HIHE), [soundcloud](https://soundcloud.com/decredindepth/leo-zhang-dcr-mining))
 - Decred in Depth Ep. 21 - @Exitus talks about producing video content for the Decred DAO, becoming a contractor and the challenges crypto marketing faces during the bear market. ([libsyn](https://decredindepth.libsyn.com/-exitus-dcr-community-managment-media), [youtube](https://www.youtube.com/watch?v=oGi3NA14CZU))
-- Rough Consensus Ep. 2 - Distributed Consensus. @mr.black, @Checkmate, and @permabullnino discuss the concept of triple entry accounting and how it provides a framework for analyzing consensus mechanisms. The theory is that PoW, PoS and hybrid security systems provide different security and ledger assurances. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
-- Rough Consensus Ep. 3 - The Long Road Ahead. @mr.black, @Checkmate, and @permabullnino discuss the latest macro shift triggered by COVID-19, the popping of the longest equities bull market in history, and how cryptocurrencies can play a role in the future. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
-- POV Crypto Podcast Ep. 127 - Hard Money in the Time of Brrr with @permabullnino ([libsyn](https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino), Decred mentioned around 30 min mark)
+- Rough Consensus Ep. 2 - Distributed consensus. @mr.black, @Checkmate, and @permabullnino discuss the concept of triple entry accounting and how it provides a framework for analyzing consensus mechanisms. The theory is that PoW, PoS and hybrid security systems provide different security and ledger assurances. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
+- Rough Consensus Ep. 3 - The long road ahead. @mr.black, @Checkmate, and @permabullnino discuss the latest macro shift triggered by COVID-19, the popping of the longest equities bull market in history, and how cryptocurrencies can play a role in the future. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
+- POV Crypto Podcast Ep. 127 - Hard money in the time of brrr with @permabullnino ([libsyn](https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino), Decred mentioned around 30 min mark)
 - What is Decred? by @elian (in Spanish, [criptotendencias.com](https://www.criptotendencias.com/podcast/episodio-30-que-es-decred-entrevista-con-elian-huesca-community-builder-business-dev-del-proyecto/))
 - Decred Brief by @elian (in Spanish, [Territorio Bitcoin](https://www.ivoox.com/episodio-111-especial-comunidad-blockchain-cuarentena-audios-mp3_rf_49382826_1.html))
 
